# raphael

./: CMakeLists.txt  README.md  gtk-test.cpp  logger-tests.cpp  logger.h  pixel_types.h  raster-tests.cpp  raster.h
image-reader/: image_reader.h
